--- a/busqueda.html
+++ b/busqueda.html
@@ -7,7 +7,14 @@
 </head>
 <body>
     <header>
-        <h1>Buscar fotos</h1>
+        <h1><a href="index.html">PI - Pictures & Images</a></h1>
+        <nav>
+            <ul>
+                <li><a href="busqueda.html">Buscar fotos</a></li>
+                <li><a href="login.html">Iniciar Sesión</a></li>
+                <li><a href="registro.html">Registro</a></li>
+            </ul>
+        </nav>
     </header>
 
     <form action="resultados.html" method="get">
