--- a/registro.html
+++ b/registro.html
@@ -7,9 +7,14 @@
 </head>
 <body>
     <header>
-        <h1>Registro de nuevo usuario</h1>
-        <!-- Botón para ir a la página de inicio -->
-        <button onclick="window.location.href='index.html'">Inicio</button>
+        <h1><a href="index.html">PI - Pictures & Images</a></h1>
+        <nav>
+            <ul>
+                <li><a href="busqueda.html">Buscar fotos</a></li>
+                <li><a href="login.html">Iniciar Sesión</a></li>
+                <li><a href="registro.html">Registro</a></li>
+            </ul>
+        </nav>
     </header>
 
     <form action="registro.html" method="post">
