--- a/login.html
+++ b/login.html
@@ -10,8 +10,8 @@
         <h1><a href="index.html">PI - Pictures & Images</a></h1>
         <nav>
             <ul>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="busqueda.html">Buscar fotos</a></li>
-                <li><a href="login.html">Iniciar Sesión</a></li>
                 <li><a href="registro.html">Registro</a></li>
             </ul>
         </nav>
@@ -27,13 +27,3 @@
             <button type="submit">Entrar</button>
         </form>
     </section>
-
-    <section>
-        <h2>Últimas fotos</h2>
-        <ul>
-            <li>
-                <a href="detalle.html">
-                    <img src="foto1.jpg" alt="Foto 1">
-                </a>
-                <p>Título: Foto 1</p>
-                <p>Fecha: 2024-09-01</p
