--- a/resultados.html
+++ b/resultados.html
@@ -19,7 +19,7 @@
 
     <ul>
         <li><img src="foto1.jpg" alt="Foto 1"><p>Título: Foto 1</p><a href="detalle.html">Ver detalles</a></li>
-        <li><img src="foto2.jpg" alt="Foto 2"><p>Título: Foto 2</p><a href="error.html">Acceso denegado</a></li>
+        <li><img src="foto2.jpg" alt="Foto 2"><p>Título: Foto 2</p><a href="detalle.html">Ver detalles</a></li>
     </ul>
 
     <footer>
