--- a/registro.html
+++ b/registro.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
 
-    <form action="registro.html" method="post">
+    <form action="index_registrado.html" method="post">
         <label for="username">Usuario:</label>
         <input type="text" id="username" name="username" required>
 
@@ -41,3 +41,4 @@
     </footer>
 </body>
 </html>
+
