--- a/index.html
+++ b/index.html
@@ -36,4 +36,40 @@
                     <img src="foto1.jpg" alt="Foto 1">
                 </a>
                 <p>Título: Foto 1</p>
-                <p>Fecha: 2024-09-01</p
+            <p>Fecha: 2024-09-01</p>
+            </li>
+
+            <li>
+                <a href="detalle.html">
+                    <img src="foto1.jpg" alt="Foto 2">
+                </a>
+                <p>Título: Foto 2</p>
+                <p>Fecha: 2024-09-01</p>
+            </li>
+
+            <li>
+                <a href="detalle.html">
+                    <img src="foto1.jpg" alt="Foto 3">
+                </a>
+                <p>Título: Foto 3</p>
+                <p>Fecha: 2024-09-01</p>
+            </li>
+
+            <li>
+                <a href="detalle.html">
+                    <img src="foto1.jpg" alt="Foto 4">
+                </a>
+                <p>Título: Foto 4</p>
+                <p>Fecha: 2024-09-01</p>
+            </li>
+
+            <li>
+                <a href="detalle.html">
+                    <img src="foto1.jpg" alt="Foto 5">
+                </a>
+                <p>Título: Foto 5</p>
+                <p>Fecha: 2024-09-01</p>
+            </li>
+        </ul>
+    </section>
+</body>
