--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <section>
         <h2>Iniciar sesión</h2>
-        <form action="index.html" method="post">
+        <form action="index_registrado.html" method="post">
             <label for="username">Usuario:</label>
             <input type="text" id="username" name="username" required>
             <label for="password">Contraseña:</label>
@@ -29,18 +29,23 @@
     </section>
 
     <section>
+        <h2>Bienvenido a nuestra pagina web</h2>
+        <p>Explora nuestras últimas fotos y comparte tus propias imágenes con la comunidad.</p>
+    </section>
+
+    <section>
         <h2>Últimas fotos</h2>
         <ul>
             <li>
-                <a href="detalle.html">
-                    <img src="foto1.jpg" alt="Foto 1">
+                <a href="login.html">
+                    <img src="img/foto1.jpg" alt="Foto 1">
                 </a>
                 <p>Título: Foto 1</p>
             <p>Fecha: 2024-09-01</p>
             </li>
 
             <li>
-                <a href="detalle.html">
+                <a href="login.html">
                     <img src="foto1.jpg" alt="Foto 2">
                 </a>
                 <p>Título: Foto 2</p>
@@ -48,7 +53,7 @@
             </li>
 
             <li>
-                <a href="detalle.html">
+                <a href="login.html">
                     <img src="foto1.jpg" alt="Foto 3">
                 </a>
                 <p>Título: Foto 3</p>
@@ -56,7 +61,7 @@
             </li>
 
             <li>
-                <a href="detalle.html">
+                <a href="login.html">
                     <img src="foto1.jpg" alt="Foto 4">
                 </a>
                 <p>Título: Foto 4</p>
@@ -64,7 +69,7 @@
             </li>
 
             <li>
-                <a href="detalle.html">
+                <a href="login.html">
                     <img src="foto1.jpg" alt="Foto 5">
                 </a>
                 <p>Título: Foto 5</p>
@@ -72,4 +77,8 @@
             </li>
         </ul>
     </section>
+    <footer>
+        <p>&copy; 2024 PI - Pictures & Images</p>
+    </footer>
 </body>
+</html>
