--- a/index_registrado.html
+++ b/index_registrado.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <header>
-        <h1><a href="index.html">PI - Pictures & Images</a></h1>
+        <h1><a href="index_registrado.html">PI - Pictures & Images</a></h1>
         <nav>
             <ul>
-                <li><a href="busqueda.html">Buscar fotos</a></li>
+                <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
                 <li><a href="perfil.html">Mi Perfil</a></li>
-                <li><a href="logout.html">Cerrar Sesión</a></li>
+                <li><a href="index.html">Cerrar Sesión</a></li>
             </ul>
         </nav>
     </header>
@@ -30,14 +30,39 @@
                     <img src="foto1.jpg" alt="Foto 1">
                 </a>
                 <p>Título: Foto 1</p>
-                <p>Fecha: 2024-09-01</p>
+            <p>Fecha: 2024-09-01</p>
             </li>
+
             <li>
                 <a href="detalle.html">
-                    <img src="foto2.jpg" alt="Foto 2">
+                    <img src="foto1.jpg" alt="Foto 2">
                 </a>
                 <p>Título: Foto 2</p>
-                <p>Fecha: 2024-09-02</p>
+                <p>Fecha: 2024-09-01</p>
+            </li>
+
+            <li>
+                <a href="detalle.html">
+                    <img src="foto1.jpg" alt="Foto 3">
+                </a>
+                <p>Título: Foto 3</p>
+                <p>Fecha: 2024-09-01</p>
+            </li>
+
+            <li>
+                <a href="detalle.html">
+                    <img src="foto1.jpg" alt="Foto 4">
+                </a>
+                <p>Título: Foto 4</p>
+                <p>Fecha: 2024-09-01</p>
+            </li>
+
+            <li>
+                <a href="detalle.html">
+                    <img src="foto1.jpg" alt="Foto 5">
+                </a>
+                <p>Título: Foto 5</p>
+                <p>Fecha: 2024-09-01</p>
             </li>
         </ul>
     </section>
