--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 
     <section>
         <h2>Iniciar sesión</h2>
-        <form action="index.html" method="post">
+        <form action="index_registrado.html" method="post">
             <label for="username">Usuario:</label>
             <input type="text" id="username" name="username" required>
             <label for="password">Contraseña:</label>
@@ -27,3 +27,8 @@
             <button type="submit">Entrar</button>
         </form>
     </section>
+    <section>
+        <h3><a href="registro.html"></a>Registrate con nosotros</h3>
+    </section>
+</body>
+</html>
