--- a/registro.html
+++ b/registro.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1><a href="index_registrado.html">PI - Pictures & Images</a></h1>
+        <h1><a href="index.html">PI - Pictures & Images</a></h1>
         <nav>
             <ul>
                 <li><a href="busqueda.html">Buscar fotos</a></li>
