--- a/resultados_registrado.html
+++ b/resultados_registrado.html
@@ -1,3 +1,6 @@
+<!-- COMO RESULTADOS PERO CAMBIANDO LA CABECERA 
+---------------------------------------------------->
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -7,12 +10,12 @@
 </head>
 <body>
     <header>
-        <h1><a href="index.html">PI - Pictures & Images</a></h1>
+        <h1><a href="index_registrado.html">PI - Pictures & Images</a></h1>
         <nav>
             <ul>
-                <li><a href="busqueda.html">Buscar fotos</a></li>
-                <li><a href="login.html">Iniciar Sesión</a></li>
-                <li><a href="registro.html">Registro</a></li>
+                <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
+                <li><a href="perfil.html">Mi Perfil</a></li>
+                <li><a href="index.html">Cerrar Sesión</a></li>
             </ul>
         </nav>
     </header>
@@ -21,7 +24,7 @@
         <h2>Resultados de la busqueda</h2>
         <ul>
             <li>
-                <a href="login.html">
+                <a href="detalle.html">
                     <img src="foto1.jpg" alt="Foto 1">
                 </a>
                 <p>Título: Foto 1</p>
@@ -29,7 +32,7 @@
             </li>
 
             <li>
-                <a href="login.html">
+                <a href="detalle.html">
                     <img src="foto1.jpg" alt="Foto 2">
                 </a>
                 <p>Título: Foto 2</p>
@@ -37,7 +40,7 @@
             </li>
 
             <li>
-                <a href="login.html">
+                <a href="detalle.html">
                     <img src="foto1.jpg" alt="Foto 3">
                 </a>
                 <p>Título: Foto 3</p>
@@ -45,7 +48,7 @@
             </li>
 
             <li>
-                <a href="login.html">
+                <a href="detalle.html">
                     <img src="foto1.jpg" alt="Foto 4">
                 </a>
                 <p>Título: Foto 4</p>
@@ -53,7 +56,7 @@
             </li>
 
             <li>
-                <a href="login.html">
+                <a href="detalle.html">
                     <img src="foto1.jpg" alt="Foto 5">
                 </a>
                 <p>Título: Foto 5</p>
