--- a/index_registrado.html
+++ b/index_registrado.html
@@ -22,6 +22,8 @@
         <p>Explora nuestras últimas fotos y comparte tus propias imágenes con la comunidad.</p>
     </section>
 
+    <h2><a href="solicitar_album.html">Solicita un album</a></h2>
+
     <section>
         <h2>Últimas fotos</h2>
         <ul>
