--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <section>
         <h2>Iniciar sesión</h2>
-        <form action="index_registrado.html" method="post">
+        <form action="index_registrado.html" method="get">
             <label for="username">Usuario:</label>
             <input type="text" id="username" name="username" required>
             <label for="password">Contraseña:</label>
