--- a/busqueda_registrado.html
+++ b/busqueda_registrado.html
@@ -1,4 +1,4 @@
-<!-- ES COMO BUSCAR PERO QUITANDO LOS BOTONES DE LA CABECERA-->
+
 
 <!DOCTYPE html>
 <html lang="es">
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
-                <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
-                <li><a href="login.html">Cerrar Sesio Sesión</a></li>
+                <li><a href="login.html">Cerrar Sesión</a></li>
+                <li><a href="mi_perfil.html">Mi Perfil</a></li>
             </ul>
         </nav>
     </header>
