--- a/index_registrado.html
+++ b/index_registrado.html
@@ -11,18 +11,18 @@
         <nav>
             <ul>
                 <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
-                <li><a href="perfil.html">Mi Perfil</a></li>
+                <li><a href="mi_perfil.html">Mi Perfil</a></li> 
                 <li><a href="index.html">Cerrar Sesión</a></li>
             </ul>
         </nav>
     </header>
 
     <section>
-        <h2>Bienvenido a nuestra pagina web</h2>
+        <h2>Bienvenido a nuestra página web</h2>
         <p>Explora nuestras últimas fotos y comparte tus propias imágenes con la comunidad.</p>
     </section>
 
-    <h2><a href="solicitar_album.html">Solicita un album</a></h2>
+    <h2><a href="solicitar_album.html">Solicita un álbum</a></h2>
 
     <section>
         <h2>Últimas fotos</h2>
@@ -32,12 +32,12 @@
                     <img src="foto1.jpg" alt="Foto 1">
                 </a>
                 <p>Título: Foto 1</p>
-            <p>Fecha: 2024-09-01</p>
+                <p>Fecha: 2024-09-01</p>
             </li>
 
             <li>
                 <a href="detalle.html">
-                    <img src="foto1.jpg" alt="Foto 2">
+                    <img src="foto2.jpg" alt="Foto 2">
                 </a>
                 <p>Título: Foto 2</p>
                 <p>Fecha: 2024-09-01</p>
@@ -45,7 +45,7 @@
 
             <li>
                 <a href="detalle.html">
-                    <img src="foto1.jpg" alt="Foto 3">
+                    <img src="foto3.jpg" alt="Foto 3">
                 </a>
                 <p>Título: Foto 3</p>
                 <p>Fecha: 2024-09-01</p>
@@ -53,7 +53,7 @@
 
             <li>
                 <a href="detalle.html">
-                    <img src="foto1.jpg" alt="Foto 4">
+                    <img src="foto4.jpg" alt="Foto 4">
                 </a>
                 <p>Título: Foto 4</p>
                 <p>Fecha: 2024-09-01</p>
@@ -61,7 +61,7 @@
 
             <li>
                 <a href="detalle.html">
-                    <img src="foto1.jpg" alt="Foto 5">
+                    <img src="foto5.jpg" alt="Foto 5">
                 </a>
                 <p>Título: Foto 5</p>
                 <p>Fecha: 2024-09-01</p>
@@ -74,3 +74,4 @@
     </footer>
 </body>
 </html>
+
