--- a/resultados_registrado.html
+++ b/resultados_registrado.html
@@ -1,5 +1,3 @@
-<!-- COMO RESULTADOS PERO CAMBIANDO LA CABECERA 
----------------------------------------------------->
 
 <!DOCTYPE html>
 <html lang="es">
@@ -14,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
-                <li><a href="perfil.html">Mi Perfil</a></li>
+                <li><a href="mi_perfil.html">Mi Perfil</a></li>
                 <li><a href="index.html">Cerrar Sesión</a></li>
             </ul>
         </nav>
