--- a/registro.html
+++ b/registro.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
 
-    <form action="index_registrado.html" method="post">
+    <form action="index_registrado.html" method="get">
         <label for="username">Usuario:</label>
         <input type="text" id="username" name="username" required>
 
