--- a/solicitar_album.html
+++ b/solicitar_album.html
@@ -62,7 +62,7 @@
 
     <h3>FORMULARIO</h3>
 
-    <form action="confirmacion_album.html" method="post">
+    <form action="confirmacion_album.html" method="get">
         
         <label for="nombre">Nombre completo:</label>
         <input type="text" id="nombre" name="nombre" maxlength="200" required>
