--- a/solicitar_album.html
+++ b/solicitar_album.html
@@ -92,7 +92,7 @@
             <br>
 
             <label for="numero">Número:</label>
-            <input type="text" id="numero" name="numero" required>
+            <input type="number" id="numero" name="numero" required>
             <br>
 
             <label for="piso">Piso:</label>
@@ -104,7 +104,7 @@
             <br>
 
             <label for="codigo_postal">Código postal:</label>
-            <input type="text" id="codigo_postal" name="codigo_postal" required>
+            <input type="number" id="codigo_postal" name="codigo_postal" required>
             <br>
 
             <label for="localidad">Localidad:</label>
