--- a/mi_perfil.html
+++ b/mi_perfil.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="index_registrado.html">Inicio</a></li>
                 <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
-                <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
+                <li><a href="solicitar_album.html">Solicita aquí tu album</a></li>
             </ul>
         </nav>
     </header>
