--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PI - Pictures & Images</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
-        <h1><a href="index_registrado.html">PI - Pictures & Images</a></h1>
+        <h1><a href="index.html">PI - Pictures & Images</a></h1>
         <nav>
             <ul>
                 <li><a href="busqueda.html">Buscar fotos</a></li>
