--- a/index_registrado.html
+++ b/index_registrado.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - PI - Pictures & Images</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
@@ -11,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
-                <li><a href="mi_perfil.html">Mi Perfil</a></li> 
+                <li><a href="mi_perfil.html">Mi Perfil</a></li>
                 <li><a href="index.html">Cerrar Sesión</a></li>
             </ul>
         </nav>
