--- a/index.html
+++ b/index.html
@@ -35,48 +35,44 @@
     </section>
 
     <section>
-        <h2>Últimas fotos</h2>
-        <ul>
-            <li>
+ <h2>Ultimas fotos</h2>
+        <div class="cards-container">
+            <div class="card">
                 <a href="login.html">
                     <img src="img/foto1.jpg" alt="Foto 1">
                 </a>
-                <p>Título: Foto 1</p>
-            <p>Fecha: 2024-09-01</p>
-            </li>
-
-            <li>
-                <a href="login.html">
-                    <img src="foto1.jpg" alt="Foto 2">
-                </a>
-                <p>Título: Foto 2</p>
+                <h3>Título: Foto 1</h3>
                 <p>Fecha: 2024-09-01</p>
-            </li>
-
-            <li>
+            </div>
+            <div class="card">
                 <a href="login.html">
-                    <img src="foto1.jpg" alt="Foto 3">
+                    <img src="foto2.jpg" alt="Foto 2">
                 </a>
-                <p>Título: Foto 3</p>
+                <h3>Título: Foto 2</h3>
                 <p>Fecha: 2024-09-01</p>
-            </li>
-
-            <li>
+            </div>
+            <div class="card">
                 <a href="login.html">
-                    <img src="foto1.jpg" alt="Foto 4">
+                    <img src="foto3.jpg" alt="Foto 3">
                 </a>
-                <p>Título: Foto 4</p>
+                <h3>Título: Foto 3</h3>
                 <p>Fecha: 2024-09-01</p>
-            </li>
-
-            <li>
+            </div>
+            <div class="card">
                 <a href="login.html">
-                    <img src="foto1.jpg" alt="Foto 5">
+                    <img src="foto4.jpg" alt="Foto 4">
                 </a>
-                <p>Título: Foto 5</p>
+                <h3>Título: Foto 4</h3>
                 <p>Fecha: 2024-09-01</p>
-            </li>
-        </ul>
+            </div>
+            <div class="card">
+                <a href="login.html">
+                    <img src="foto5.jpg" alt="Foto 5">
+                </a>
+                <h3>Título: Foto 5</h3>
+                <p>Fecha: 2024-09-01</p>
+            </div>
+        </div>
     </section>
     <footer>
         <p>&copy; 2024 PI - Pictures & Images</p>
