--- a/mi_perfil.html
+++ b/mi_perfil.html
@@ -13,8 +13,8 @@
             <ul>
                 <li><a href="index_registrado.html">Inicio</a></li>
                 <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
-                <li><a href="solicitar_album.html">Solicita aquí tu album</a></li>
                 <li><a href="index.html">Cerrar Sesión</a></li>
+                <li><a href="solicitar_album.html">Solicitar album</a></li>
             </ul>
         </nav>
     </header>
