--- a/busqueda_registrado.html
+++ b/busqueda_registrado.html
@@ -14,8 +14,9 @@
         <nav>
             <ul>
                 <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
-                <li><a href="login.html">Cerrar Sesión</a></li>
                 <li><a href="mi_perfil.html">Mi Perfil</a></li>
+                <li><a href="solicitar_album.html">Solicitar album</a></li>
+                <li><a href="index.html">Cerrar Sesión</a></li>
             </ul>
         </nav>
     </header>
