--- a/index_registrado.html
+++ b/index_registrado.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
                 <li><a href="mi_perfil.html">Mi Perfil</a></li>
+                <li><a href="solicitar_album.html">Solicitar album</a></li>
                 <li><a href="index.html">Cerrar Sesión</a></li>
             </ul>
         </nav>
@@ -23,51 +24,47 @@
         <p>Explora nuestras últimas fotos y comparte tus propias imágenes con la comunidad.</p>
     </section>
 
-    <h2><a href="solicitar_album.html">Solicita un álbum</a></h2>
+    
 
     <section>
-        <h2>Últimas fotos</h2>
-        <ul>
-            <li>
+        <h2>Ultimas fotos</h2>
+        <div class="cards-container">
+            <div class="card">
                 <a href="detalle.html">
                     <img src="foto1.jpg" alt="Foto 1">
                 </a>
-                <p>Título: Foto 1</p>
+                <h3>Título: Foto 1</h3>
                 <p>Fecha: 2024-09-01</p>
-            </li>
-
-            <li>
+            </div>
+            <div class="card">
                 <a href="detalle.html">
                     <img src="foto2.jpg" alt="Foto 2">
                 </a>
-                <p>Título: Foto 2</p>
+                <h3>Título: Foto 2</h3>
                 <p>Fecha: 2024-09-01</p>
-            </li>
-
-            <li>
+            </div>
+            <div class="card">
                 <a href="detalle.html">
                     <img src="foto3.jpg" alt="Foto 3">
                 </a>
-                <p>Título: Foto 3</p>
+                <h3>Título: Foto 3</h3>
                 <p>Fecha: 2024-09-01</p>
-            </li>
-
-            <li>
+            </div>
+            <div class="card">
                 <a href="detalle.html">
                     <img src="foto4.jpg" alt="Foto 4">
                 </a>
-                <p>Título: Foto 4</p>
+                <h3>Título: Foto 4</h3>
                 <p>Fecha: 2024-09-01</p>
-            </li>
-
-            <li>
+            </div>
+            <div class="card">
                 <a href="detalle.html">
                     <img src="foto5.jpg" alt="Foto 5">
                 </a>
-                <p>Título: Foto 5</p>
+                <h3>Título: Foto 5</h3>
                 <p>Fecha: 2024-09-01</p>
-            </li>
-        </ul>
+            </div>
+        </div>
     </section>
 
     <footer>
