--- a/solicitar_album.html
+++ b/solicitar_album.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solicitar Álbum Impreso</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header>
@@ -14,6 +15,8 @@
                 <li><a href="index_registrado.html">Inicio</a></li>
                 <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
                 <li><a href="mi_perfil.html">Mi Perfil</a></li>
+                <li><a href="solicitar_album.html">Solicitar album</a></li>
+                <li><a href="index.html">Cerrar Sesión</a></li>
             </ul>
         </nav>
     </header>
