--- a/busqueda_registrado.html
+++ b/busqueda_registrado.html
@@ -7,12 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Búsqueda - PI</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header>
         <h1><a href="index_registrado.html">PI - Pictures & Images</a></h1>
         <nav>
             <ul>
+                <li><a href="index_registrado.html">Inicio</a></li>
                 <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
                 <li><a href="mi_perfil.html">Mi Perfil</a></li>
                 <li><a href="solicitar_album.html">Solicitar album</a></li>
