--- a/detalle.html
+++ b/detalle.html
@@ -5,25 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalles de la foto - PI</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header>
         <h1><a href="index_registrado.html">PI - Pictures & Images</a></h1>
         <nav>
             <ul>
-                <li><a href="busqueda.html">Buscar fotos</a></li>
-                <li><a href="login.html">Iniciar Sesión</a></li>
-                <li><a href="registro.html">Registro</a></li>
+                <li><a href="index_registrado.html">Inicio</a></li>
+                <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
+                <li><a href="mi_perfil.html">Mi Perfil</a></li>
+                <li><a href="solicitar_album.html">Solicitar album</a></li>
+                <li><a href="index.html">Cerrar Sesión</a></li>
             </ul>
         </nav>
     </header>
 
-    <img src="foto1.jpg" alt="Foto 1">
-    <p>Título: Foto 1</p>
-    <p>Fecha: 2024-09-01</p>
-    <p>País: España</p>
-    <p>Álbum: Verano 2024</p>
-    <p>Usuario: Juan Pérez</p>
+    <section>
+        <div class="content-container">
+            <img src="img/foto1.jpg" alt="Foto 1">
+            <p>Título: Foto 1</p>
+            <p>Fecha: 2024-09-01</p>
+            <p>País: España</p>
+            <p>Álbum: Verano 2024</p>
+            <p>Usuario: Juan Pérez</p>
+        </div>
+    </section>
 
     <footer>
         <p>&copy; 2024 PI - Pictures & Images</p>
