--- a/resultados.html
+++ b/resultados.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resultados - PI</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header>
@@ -23,7 +24,7 @@
         <ul>
             <li>
                 <a href="login.html">
-                    <img src="foto1.jpg" alt="Foto 1">
+                    <img src="img/foto1.jpg" alt="Foto 1">
                 </a>
                 <p>Título: Foto 1</p>
             <p>Fecha: 2024-09-01</p>
@@ -31,7 +32,7 @@
 
             <li>
                 <a href="login.html">
-                    <img src="foto1.jpg" alt="Foto 2">
+                    <img src="img/foto1.jpg" alt="Foto 2">
                 </a>
                 <p>Título: Foto 2</p>
                 <p>Fecha: 2024-09-01</p>
@@ -39,7 +40,7 @@
 
             <li>
                 <a href="login.html">
-                    <img src="foto1.jpg" alt="Foto 3">
+                    <img src="img/foto1.jpg" alt="Foto 3">
                 </a>
                 <p>Título: Foto 3</p>
                 <p>Fecha: 2024-09-01</p>
@@ -47,7 +48,7 @@
 
             <li>
                 <a href="login.html">
-                    <img src="foto1.jpg" alt="Foto 4">
+                    <img src="img/foto1.jpg" alt="Foto 4">
                 </a>
                 <p>Título: Foto 4</p>
                 <p>Fecha: 2024-09-01</p>
@@ -55,7 +56,7 @@
 
             <li>
                 <a href="login.html">
-                    <img src="foto1.jpg" alt="Foto 5">
+                    <img src="img/foto1.jpg" alt="Foto 5">
                 </a>
                 <p>Título: Foto 5</p>
                 <p>Fecha: 2024-09-01</p>
