--- a/resultados_registrado.html
+++ b/resultados_registrado.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resultados - PI</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header>
         <h1><a href="index_registrado.html">PI - Pictures & Images</a></h1>
         <nav>
             <ul>
+                <li><a href="index_registrado.html">Inicio</a></li>
                 <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
                 <li><a href="mi_perfil.html">Mi Perfil</a></li>
+                <li><a href="solicitar_album.html">Solicitar album</a></li>
                 <li><a href="index.html">Cerrar Sesión</a></li>
             </ul>
         </nav>
@@ -23,14 +26,14 @@
         <div class="cards-container">
             <div class="card">
                 <a href="detalle.html">
-                    <img src="foto1.jpg" alt="Foto 1">
+                    <img src="img/foto1.jpg" alt="Foto 1">
                 </a>
                 <h3>Título: Foto 1</h3>
                 <p>Fecha: 2024-09-01</p>
             </div>
             <div class="card">
                 <a href="detalle.html">
-                    <img src="foto2.jpg" alt="Foto 2">
+                    <img src="img/foto1.jpg" alt="Foto 2">
                 </a>
                 <h3>Título: Foto 2</h3>
                 <p>Fecha: 2024-09-01</p>
@@ -44,14 +47,14 @@
             </div>
             <div class="card">
                 <a href="detalle.html">
-                    <img src="foto4.jpg" alt="Foto 4">
+                    <img src="img/foto1.jpg" alt="Foto 4">
                 </a>
                 <h3>Título: Foto 4</h3>
                 <p>Fecha: 2024-09-01</p>
             </div>
             <div class="card">
                 <a href="detalle.html">
-                    <img src="foto5.jpg" alt="Foto 5">
+                    <img src="img/foto1.jpg" alt="Foto 5">
                 </a>
                 <h3>Título: Foto 5</h3>
                 <p>Fecha: 2024-09-01</p>
