--- a/resultados.html
+++ b/resultados.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resultados - PI</title>
     <link rel="stylesheet" href="styles/styles.css" title = "estilos por defecto">
+    <link rel="alternate stylesheet" href="styles/modo_noche.css" title="Modo Noche">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
