--- a/solicitar_album.html
+++ b/solicitar_album.html
@@ -6,6 +6,7 @@
     <title>Solicitar Álbum Impreso</title>
     <link rel="stylesheet" href="styles/styles.css" title = "estilos por defecto">
     <link rel="alternate stylesheet" href="styles/modo_noche.css" title="Modo Noche">
+    <link rel="alternate stylesheet" href="styles/alto_contraste.css" title="Alto contraste">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
