--- a/confirmacion_album.html
+++ b/confirmacion_album.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles/styles.css" title = "estilos por defecto">
     <link rel="alternate stylesheet" href="styles/modo_noche.css" title="Modo Noche">
     <link rel="alternate stylesheet" href="styles/alto_contraste.css" title="Alto contraste">
+    <link rel="alternate stylesheet" href="styles/mejorar_accesibilidad.css" title="mejorar accesibilidad">
+    <link rel="alternate stylesheet" href="styles/modo_impresion.css" title="Modo impresion">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
