--- a/detalle.html
+++ b/detalle.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalles de la foto - PI</title>
-    <link rel="stylesheet" href="styles/styles.css" title = "estilos por defecto">
+    <link rel="stylesheet" href="styles/styles.css" title="estilos por defecto">
     <link rel="alternate stylesheet" href="styles/modo_noche.css" title="Modo Noche">
     <link rel="alternate stylesheet" href="styles/alto_contraste.css" title="Alto contraste">
+    <link rel="alternate stylesheet" href="styles/mejorar_accesibilidad.css" title="Mejorar accesibilidad">
+    <link rel="alternate stylesheet" href="styles/modo_impresion.css" title="Modo impresión">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
@@ -17,7 +19,7 @@
                 <li><a href="index_registrado.html">Inicio</a></li>
                 <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
                 <li><a href="mi_perfil.html">Mi Perfil</a></li>
-                <li><a href="solicitar_album.html">Solicitar album</a></li>
+                <li><a href="solicitar_album.html">Solicitar álbum</a></li>
                 <li><a href="index.html">Cerrar Sesión</a></li>
             </ul>
         </nav>
