tag media print

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="alternate stylesheet" href="styles/modo_noche.css" title="Modo Noche">
     <link rel="alternate stylesheet" href="styles/alto_contraste.css" title="Alto contraste">
     <link rel="alternate stylesheet" href="styles/mejorar_accesibilidad.css" title="Mejorar accesibilidad">
-    <link rel="alternate stylesheet" href="styles/modo_impresion.css" title="Modo impresión">
+    <link rel="alternate stylesheet" href="styles/modo_impresion.css" title="Modo impresión" media = "print">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
