--- a/solicitar_album.html
+++ b/solicitar_album.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solicitar Álbum Impreso</title>
-    <link rel="stylesheet" href="styles/styles.css" title = "estilos por defecto">
+    <link rel="stylesheet" href="styles/styles.css" title="estilos por defecto">
     <link rel="alternate stylesheet" href="styles/modo_noche.css" title="Modo Noche">
     <link rel="alternate stylesheet" href="styles/alto_contraste.css" title="Alto contraste">
-    <link rel="alternate stylesheet" href="styles/mejorar_accesibilidad.css" title="Mejorar accesibilidad" media = "print">
+    <link rel="alternate stylesheet" href="styles/mejorar_accesibilidad.css" title="Mejorar accesibilidad" media="print">
     <link rel="alternate stylesheet" href="styles/modo_impresion.css" title="Modo impresión">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -27,122 +27,126 @@
 
     <h2>Solicitar Álbum Impreso</h2>
 
-    <h3>TABLA DE PRECIOS</h3>
+    <div class="contenedor-columnas">
+        <div class="columna tabla-precios">
+            <h3>TABLA DE PRECIOS</h3>
+            <table>
+                <tr>
+                    <th>Concepto</th>
+                    <th>Tarifa</th>
+                </tr>
+                <tr>
+                    <td>Coste procesamiento y envío</td>
+                    <td>10 €</td>
+                </tr>
+                <tr>
+                    <td>&lt; 5 páginas</td>
+                    <td>2 € por pág.</td>
+                </tr>
+                <tr>
+                    <td>entre 5 y 10 páginas</td>
+                    <td>1.8 € por pág.</td>
+                </tr>
+                <tr>
+                    <td>&gt; 10 páginas</td>
+                    <td>1.6 € por pág.</td>
+                </tr>
+                <tr>
+                    <td>Blanco y negro</td>
+                    <td>0 €</td>
+                </tr>
+                <tr>
+                    <td>Color</td>
+                    <td>0.5 € por foto</td>
+                </tr>
+                <tr>
+                    <td>Resolución &le; 300 dpi</td>
+                    <td>0 € por foto</td>
+                </tr>
+                <tr>
+                    <td>Resolución &gt; 300 dpi</td>
+                    <td>0.2 € por foto</td>
+                </tr>
+            </table>
+        </div>
 
-    <table>
-        <tr>
-            <th>Concepto</th>
-            <th>Tarifa</th>
-        </tr>
-        <tr>
-            <td>Coste procesamiento y envío</td>
-            <td>10 €</td>
-        </tr>
-        <tr>
-            <td>&lt; 5 páginas</td>
-            <td>2 € por pág.</td>
-        </tr>
-        <tr>
-            <td>entre 5 y 10 páginas</td>
-            <td>1.8 € por pág.</td>
-        </tr>
-        <tr>
-            <td>&gt; 10 páginas</td>
-            <td>1.6 € por pág.</td>
-        </tr>
-        <tr>
-            <td>Blanco y negro</td>
-            <td>0 €</td>
-        </tr>
-        <tr>
-            <td>Color</td>
-            <td>0.5 € por foto</td>
-        </tr>
-        <tr>
-            <td>Resolución &le; 300 dpi</td>
-            <td>0 € por foto</td>
-        </tr>
-        <tr>
-            <td>Resolución &gt; 300 dpi</td>
-            <td>0.2 € por foto</td>
-        </tr>
-    </table>
+        <div class="columna formulario">
+            <h3>FORMULARIO</h3>
+            <form action="confirmacion_album.html" method="get">
+                <label for="nombre">Nombre completo:</label>
+                <input type="text" id="nombre" name="nombre" maxlength="200" required>
 
-    <h3>FORMULARIO</h3>
+                <label for="titulo">Título del álbum:</label>
+                <input type="text" id="titulo" name="titulo" maxlength="200" required>
 
-    <form action="confirmacion_album.html" method="get">
-        <label for="nombre">Nombre completo:</label>
-        <input type="text" id="nombre" name="nombre" maxlength="200" required>
+                <label for="texto">Texto adicional (dedicatoria):</label>
+                <textarea id="texto" name="texto" maxlength="4000"></textarea>
 
-        <label for="titulo">Título del álbum:</label>
-        <input type="text" id="titulo" name="titulo" maxlength="200" required>
+                <label for="email">Correo electrónico:</label>
+                <input type="email" id="email" name="email" required>
 
-        <label for="texto">Texto adicional (dedicatoria):</label>
-        <textarea id="texto" name="texto" maxlength="4000"></textarea>
+                <fieldset>
+                    <legend>Dirección de envío</legend>
 
-        <label for="email">Correo electrónico:</label>
-        <input type="email" id="email" name="email" required>
+                    <label for="calle">Calle:</label>
+                    <input type="text" id="calle" name="calle" required>
 
-        <fieldset>
-            <legend>Dirección de envío</legend>
+                    <label for="numero">Número:</label>
+                    <input type="number" id="numero" name="numero" required>
 
-            <label for="calle">Calle:</label>
-            <input type="text" id="calle" name="calle" required>
+                    <label for="piso">Piso:</label>
+                    <input type="text" id="piso" name="piso">
 
-            <label for="numero">Número:</label>
-            <input type="number" id="numero" name="numero" required>
+                    <label for="puerta">Puerta:</label>
+                    <input type="text" id="puerta" name="puerta">
 
-            <label for="piso">Piso:</label>
-            <input type="text" id="piso" name="piso">
+                    <label for="codigo_postal">Código postal:</label>
+                    <input type="number" id="codigo_postal" name="codigo_postal" required>
 
-            <label for="puerta">Puerta:</label>
-            <input type="text" id="puerta" name="puerta">
+                    <label for="localidad">Localidad:</label>
+                    <input type="text" id="localidad" name="localidad" required>
 
-            <label for="codigo_postal">Código postal:</label>
-            <input type="number" id="codigo_postal" name="codigo_postal" required>
+                    <label for="provincia">Provincia:</label>
+                    <input type="text" id="provincia" name="provincia" required>
 
-            <label for="localidad">Localidad:</label>
-            <input type="text" id="localidad" name="localidad" required>
+                    <label for="pais">País:</label>
+                    <input type="text" id="pais" name="pais" required>
+                </fieldset>
 
-            <label for="provincia">Provincia:</label>
-            <input type="text" id="provincia" name="provincia" required>
+                <label for="telefono">Teléfono (opcional):</label>
+                <input type="tel" id="telefono" name="telefono">
 
-            <label for="pais">País:</label>
-            <input type="text" id="pais" name="pais" required>
-        </fieldset>
+                <label for="color">Color de la portada:</label>
+                <input type="color" id="color" name="color" value="#000000">
 
-        <label for="telefono">Teléfono (opcional):</label>
-        <input type="tel" id="telefono" name="telefono">
+                <label for="copias">Número de copias:</label>
+                <input type="number" id="copias" name="copias" min="1" max="99" value="1" required>
 
-        <label for="color">Color de la portada:</label>
-        <input type="color" id="color" name="color" value="#000000">
+                <label for="resolucion">Resolución de las fotos (DPI):</label>
+                <input type="range" id="resolucion" name="resolucion" min="150" max="900" step="150" value="150">
 
-        <label for="copias">Número de copias:</label>
-        <input type="number" id="copias" name="copias" min="1" max="99" value="1" required>
+                <label for="album">Álbum seleccionado:</label>
+                <select id="album" name="album" required>
+                    <option value="verano2024">Verano 2024</option>
+                    <option value="cumpleaños2023">Cumpleaños 2023</option>
+                    <option value="navidad2023">Navidad 2023</option>
+                </select>
 
-        <label for="resolucion">Resolución de las fotos (DPI):</label>
-        <input type="range" id="resolucion" name="resolucion" min="150" max="900" step="150" value="150">
+                <label for="fecha">Fecha de recepción (opcional):</label>
+                <input type="date" id="fecha" name="fecha">
 
-        <label for="album">Álbum seleccionado:</label>
-        <select id="album" name="album" required>
-            <option value="verano2024">Verano 2024</option>
-            <option value="cumpleaños2023">Cumpleaños 2023</option>
-            <option value="navidad2023">Navidad 2023</option>
-        </select>
+                <label for="impresion">Impresión:</label>
+                <select id="impresion" name="impresion">
+                    <option value="color">Color</option>
+                    <option value="blanco_negro">Blanco y negro</option>
+                </select>
 
-        <label for="fecha">Fecha de recepción (opcional):</label>
-        <input type="date" id="fecha" name="fecha">
+                <p><strong>Precio estándar del álbum: 50,00 €</strong></p>
 
-        <label for="impresion">Impresión:</label>
-        <select id="impresion" name="impresion">
-            <option value="color">Color</option>
-            <option value="blanco_negro">Blanco y negro</option>
-        </select>
-
-        <p><strong>Precio estándar del álbum: 50,00 €</strong></p>
-
-        <button type="submit">Solicitar Álbum</button>
-    </form>
+                <button type="submit">Solicitar Álbum</button>
+            </form>
+        </div>
+    </div>
 
     <footer>
         <p>&copy; 2024 PI - Pictures & Images</p>
