--- a/registro.html
+++ b/registro.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
 
-    <form id="formulario_registro" action="index_registrado.html" method="post" enctype="multipart/form-data">
+    <form id="formulario_registro" action="index_registrado.html" method="get" enctype="multipart/form-data">
         
         <label for="registro_usuario">Nombre de usuario:</label>
         <input type="text" id="registro_usuario" name="username">
