--- a/resultados_registrado.html
+++ b/resultados_registrado.html
@@ -10,6 +10,7 @@
     <link rel="alternate stylesheet" href="styles/alto_contraste.css" title="Alto contraste">
     <link rel="alternate stylesheet" href="styles/mejorar_accesibilidad.css" title="Mejorar accesibilidad" media = "print">
     <link rel="alternate stylesheet" href="styles/modo_impresion.css" title="Modo impresión">
+    <link rel="alternate stylesheet" href="styles/letra_grande.css" title="Letra grande">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
