--- a/confirmacion_album.html
+++ b/confirmacion_album.html
@@ -20,6 +20,7 @@
                 <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
                 <li><a href="mi_perfil.html">Mi Perfil</a></li>
                 <li><a href="solicitar_album.html">Solicitar album</a></li>
+                <link rel="alternate stylesheet" href="styles/letra_grande.css" title="Letra grande">
                 <li><a href="index.html">Cerrar Sesión</a></li>
             </ul>
         </nav>
