Declaracion de accesibilidad

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     
     <footer>
         <p>&copy; 2024 PI - Pictures & Images</p>
+        <p><a href="accesibilidad.html">Accesibilidad</a></li></p>
     </footer>
 </body>
 </html>
