--- a/solicitar_album.html
+++ b/solicitar_album.html
@@ -14,14 +14,14 @@
 </head>
 <body>
     <header>
-        <h1><a href="index_registrado.html">PI - Pictures & Images</a></h1>
+        <h1><a href="index_registrado.php">PI - Pictures & Images</a></h1>
         <nav>
             <ul>
-                <li><a href="index_registrado.html">Inicio</a></li>
-                <li><a href="busqueda_registrado.html">Buscar fotos</a></li>
-                <li><a href="mi_perfil.html">Mi Perfil</a></li>
-                <li><a href="solicitar_album.html">Solicitar álbum</a></li>
-                <li><a href="index.html">Cerrar Sesión</a></li>
+                <li><a href="index_registrado.php">Inicio</a></li>
+                <li><a href="busqueda_registrado.php">Buscar fotos</a></li>
+                <li><a href="mi_perfil.php">Mi Perfil</a></li>
+                <li><a href="solicitar_album.php">Solicitar álbum</a></li>
+                <li><a href="index.php">Cerrar Sesión</a></li>
             </ul>
         </nav>
     </header>
@@ -48,7 +48,7 @@
 
         <div class="columna formulario">
             <h3>FORMULARIO</h3>
-            <form id="albumForm" action="confirmacion_album.html" method="get">
+            <form id="albumForm" action="confirmacion_album.php" method="get">
                 <label for="nombre">Nombre completo:</label>
                 <input type="text" id="nombre" name="nombre">
                 <span class="error-message" id="nombreError"></span>
